src/assets/css/main.css
* {
    font-family: 'Trebuchet MS', sans-serif;
}
html, body {
    height: 100%;
    margin: 0;
}
.main {
    height: auto;
    background-color: #6B911B;

}

.take-whole-page {
    height: 100%;
}

.adau-color-1 {
    background-color: #598216;
}

#app {
    background-color: #6B911B;
    color: white;

    height: 100%;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    border: 3px solid green;
}
.form {
    border-radius: 5px;
    background-color: #598216;
    padding: 10px;
}

.footer-fixed {
    position: fixed;
    bottom: 0;
}

